--- a/ios/Partner.xcodeproj/xcshareddata/xcschemes/Partner.xcscheme
+++ b/ios/Partner.xcodeproj/xcshareddata/xcschemes/Partner.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "PocketPal.app"
-               BlueprintName = "PocketPal"
-               ReferencedContainer = "container:PocketPal.xcodeproj">
+               BuildableName = "Partner.app"
+               BlueprintName = "Partner"
+               ReferencedContainer = "container:Partner.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "PocketPalTests.xctest"
-               BlueprintName = "PocketPalTests"
-               ReferencedContainer = "container:PocketPal.xcodeproj">
+               BuildableName = "PartnerTests.xctest"
+               BlueprintName = "PartnerTests"
+               ReferencedContainer = "container:Partner.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "PocketPal.app"
-            BlueprintName = "PocketPal"
-            ReferencedContainer = "container:PocketPal.xcodeproj">
+            BuildableName = "Partner.app"
+            BlueprintName = "Partner"
+            ReferencedContainer = "container:Partner.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "PocketPal.app"
-            BlueprintName = "PocketPal"
-            ReferencedContainer = "container:PocketPal.xcodeproj">
+            BuildableName = "Partner.app"
+            BlueprintName = "Partner"
+            ReferencedContainer = "container:Partner.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
